src/main/java/com/example/hyebozabackend/global/error/custom/CustomException.java
package com.example.hyebozabackend.global.error.custom;

import lombok.Getter;
import lombok.RequiredArgsConstructor;

@Getter
@RequiredArgsConstructor
public class CustomException extends RuntimeException{
    private final ErrorCode errorCode;
}
